<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPastillero">

    <Button
        android:id="@+id/botonVincular"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="52dp"
        android:text="@string/txt_boton_vincular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botonCerrarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/txt_boton_cerrar"
        app:backgroundTint="#FF0404"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/boton_comprobar"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:text="@string/txt_boton_comprobar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonVincular" />

    <Button
        android:id="@+id/boton_añadir"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:text="@string/txt_boton_anadir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton_comprobar" />

    <Button
        android:id="@+id/boton_consultar"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:text="@string/txt_boton_modificaciones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton_añadir" />

    <Button
        android:id="@+id/botonMedidas"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:text="@string/txt_boton_consultar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton_consultar" />
</androidx.constraintlayout.widget.ConstraintLayout>